fixed problems, started adaptive

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/styles.css" />
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-    <link rel="stylesheet" href="slick/slick.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+    <link rel="stylesheet" href="slick/slick.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="wrapper">
       <header class="header">
         <div class="header__body">
-          <span class="header__logo"> </span>
+          <span class="header__logo"></span>
           <button class="header__button">Заказать звонок</button>
           <span class="header__contact-number">+7 (4212) 25-30-85</span>
           <div class="header__burger-menu-icon"></div>
@@ -33,30 +33,6 @@
           <div class="container">
             <div class="section-1__body">
               <div class="section-1__tag">
-                <svg
-                  width="11"
-                  height="11"
-                  viewBox="0 0 19 20"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <g clip-path="url(#clip0_1_5217)">
-                    <path
-                      d="M5.66667 15.6297C4.62778 15.6297 3.77778 16.4797 3.77778 17.5186C3.77778 18.5574 4.62778 19.4074 5.66667 19.4074C6.70556 19.4074 7.55556 18.5574 7.55556 17.5186C7.55556 16.4797 6.70556 15.6297 5.66667 15.6297ZM0 0.518555V2.40744H1.88889L5.28889 9.58522L3.96667 11.8519C3.87222 12.1352 3.77778 12.513 3.77778 12.7963C3.77778 13.8352 4.62778 14.6852 5.66667 14.6852H17V12.7963H6.04444C5.95 12.7963 5.85556 12.7019 5.85556 12.6074V12.513L6.70556 10.9074H13.6944C14.45 10.9074 15.0167 10.5296 15.3 9.96296L18.7 3.82411C18.8889 3.63522 18.8889 3.54078 18.8889 3.35189C18.8889 2.78522 18.5111 2.40744 17.9444 2.40744H3.96667L3.11667 0.518555H0ZM15.1111 15.6297C14.0722 15.6297 13.2222 16.4797 13.2222 17.5186C13.2222 18.5574 14.0722 19.4074 15.1111 19.4074C16.15 19.4074 17 18.5574 17 17.5186C17 16.4797 16.15 15.6297 15.1111 15.6297Z"
-                      fill="#FF834E"
-                    />
-                  </g>
-                  <defs>
-                    <clipPath id="clip0_1_5217">
-                      <rect
-                        width="18.8889"
-                        height="18.8889"
-                        fill="white"
-                        transform="translate(0 0.518555)"
-                      />
-                    </clipPath>
-                  </defs>
-                </svg>
                 <p>E-commerce</p>
               </div>
               <h1 class="section-1__title">
@@ -74,30 +50,31 @@
 
         <section class="section-2">
           <h2 class="section-2__title">КАК МЫ РАБОТАЕМ НАД ВАШИМ ПРОЕКТОМ</h2>
+
           <div class="section-2__cards-steps-container">
             <a href="#section-2" class="card-step">
               <span class="card-step__number">01</span>
               <span class="card-step__icon"></span>
               <span class="card-step__title">Анализ Целевой Аудитории</span>
-              <p class="card-step__description">
+              <span class="card-step__description">
                 Подключите один из надежных сервисов: Яндекс.Деньги,
                 Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели
                 смогут безопасно оплатить товар или услугу картой Visa или
                 Mastercard, Яндекс.Деньгами, со счета мобильного телефона, через
                 Сбербанк Онлайн или Альфа Клик.
-              </p>
+              </span>
             </a>
             <a href="#section-2" class="card-step">
               <span class="card-step__number">02</span>
               <span class="card-step__icon"></span>
               <span class="card-step__title">ПОДГОТОВКА ТЗ</span>
-              <p class="card-step__description">
+              <span class="card-step__description">
                 Подключите один из надежных сервисов: Яндекс.Деньги,
                 Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели
                 смогут безопасно оплатить товар или услугу картой Visa или
                 Mastercard, Яндекс.Деньгами, со счета мобильного телефона, через
                 Сбербанк Онлайн или Альфа Клик.
-              </p>
+              </span>
             </a>
             <a href="#section-2" class="card-step">
               <span class="card-step__number">03</span>
@@ -106,13 +83,13 @@
                 >ПОДПИСАНИЕ ДОГОВОРА<br />
                 И ОПЛАТА</span
               >
-              <p class="card-step__description">
+              <span class="card-step__description">
                 Подключите один из надежных сервисов: Яндекс.Деньги,
                 Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели
                 смогут безопасно оплатить товар или услугу картой Visa или
                 Mastercard, Яндекс.Деньгами, со счета мобильного телефона, через
                 Сбербанк Онлайн или Альфа Клик.
-              </p>
+              </span>
             </a>
             <a href="#section-2" class="card-step">
               <span class="card-step__number">04</span>
@@ -120,13 +97,13 @@
               <span class="card-step__title"
                 >РАЗРАБОТКА САЙТА ИНТЕРНЕТ-МАГАЗИНА</span
               >
-              <p class="card-step__description">
+              <span class="card-step__description">
                 Подключите один из надежных сервисов: Яндекс.Деньги,
                 Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели
                 смогут безопасно оплатить товар или услугу картой Visa или
                 Mastercard, Яндекс.Деньгами, со счета мобильного телефона, через
                 Сбербанк Онлайн или Альфа Клик.
-              </p>
+              </span>
             </a>
             <a href="#section-2" class="card-step">
               <span class="card-step__number">05</span>
@@ -134,27 +111,26 @@
               <span class="card-step__title"
                 >НАСТРОЙКА И НАПОЛНЕНИЕ ИНТЕРНЕТ-МАГАЗИНА</span
               >
-              <p class="card-step__description">
+              <span class="card-step__description">
                 Подключите один из надежных сервисов: Яндекс.Деньги,
                 Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели
                 смогут безопасно оплатить товар или услугу картой Visa или
                 Mastercard, Яндекс.Деньгами, со счета мобильного телефона, через
                 Сбербанк Онлайн или Альфа Клик.
-              </p>
+              </span>
             </a>
             <a href="#section-2" class="card-step">
               <span class="card-step__number">06</span>
               <span class="card-step__icon"></span>
               <span class="card-step__title">ПРИВЛЕЧЕНИЕ ПОКУПАТЕЛЕЙ</span>
-              <p class="card-step__description">
+              <span class="card-step__description">
                 Подключите один из надежных сервисов: Яндекс.Деньги,
                 Яндекс.Касса, PayPal, Robokassa или Stripe, и ваши покупатели
                 смогут безопасно оплатить товар или услугу картой Visa или
                 Mastercard, Яндекс.Деньгами, со счета мобильного телефона, через
                 Сбербанк Онлайн или Альфа Клик.
-              </p>
+              </span>
             </a>
-            <!-- иконка-плюсик через псевдоэлемент для текста при наведении -->
           </div>
         </section>
 
@@ -211,15 +187,16 @@
         <section class="section-4">
           <div class="container">
             <h2 class="section-4__title"></h2>
+
             <div class="section-4__cards-container">
               <a class="card">
-                <div class="card__img-wrap">
+                <span class="card__img-wrap">
                   <img
                     class="card__img"
                     src="styles/img/cases/gabor-juhasz-68424-unsplash.png"
                     alt=""
                   />
-                </div>
+                </span>
                 <p class="card__title">Королевство цветов</p>
                 <p class="card__subtitle">Интернет-магазин</p>
               </a>
@@ -272,13 +249,37 @@
 
         <section class="section-5">
           <h2 class="section-5__title">НАШИ КЛИЕНТЫ</h2>
-          <div class="section-5__slider slider single-item">
-              <img class="section-5__img" src="styles/img/clients/1.png" alt="" />
-            <img class="section-5__img" src="styles/img/clients/2.png" alt="" />
-            <img class="section-5__img" src="styles/img/clients/3.png" alt="" />
-            <img class="section-5__img" src="styles/img/clients/4.png" alt="" />
+          <div class="section-5__slider">
+            <div class="section-5__img-wrap">
+              <img
+                class="section-5__img"
+                src="styles/img/clients/1.png"
+                alt=""
+              />
+            </div>
+            <div class="section-5__img-wrap">
+              <img
+                class="section-5__img"
+                src="styles/img/clients/2.png"
+                alt=""
+              />
+            </div>
+            <div class="section-5__img-wrap">
+              <img
+                class="section-5__img"
+                src="styles/img/clients/3.png"
+                alt=""
+              />
+            </div>
+            <div class="section-5__img-wrap">
+              <img
+                class="section-5__img"
+                src="styles/img/clients/4.png"
+                alt=""
+              />
+            </div>
           </div>
-          <!-- <div class="section-5__slider-controls"></div> -->
+          <div class="section-5__slider-controls"></div>
         </section>
 
         <section class="section-6">
@@ -287,9 +288,11 @@
               <p class="section-6__subtitle">
                 Оставьте заявку, чтобы узнать, как создать свой Интернет-магазин
               </p>
+
               <p class="section-6__title">
                 Интернет-магазин, который приносит прибыль
               </p>
+
               <div class="section-6__banner">
                 <span>Получите бесплатно</span>
                 <ul class="section-6__list">
@@ -298,6 +301,7 @@
                   <li>Коммерческое предложение</li>
                 </ul>
               </div>
+
               <form class="section-6__feedback-form">
                 <label class="_sr-only" for="name">Имя</label>
                 <input class="section-6__input" id="name" placeholder="Имя" />
@@ -341,9 +345,10 @@
           </div>
         </section>
       </main>
+
       <footer class="footer">
         <div class="footer__body">
-            <img class="footer__logo" src="styles/img/footer/Logo.png" alt="" />
+          <img class="footer__logo" src="styles/img/footer/Logo.png" alt="" />
 
           <div class="footer__content-block">
             <span class="footer__contacts-title">Контакты</span>
@@ -376,10 +381,17 @@
                 stroke-width="2"
               />
             </svg>
-            <img class="map-block__img" src="styles/img/footer/Map.png" alt="" />
 
+            <img
+              class="map-block__img"
+              src="styles/img/footer/Map.png"
+              alt=""
+            />
+          </div>
         </div>
       </footer>
+    </div>
+
     <script src="js/jquery-3.6.0.js"></script>
     <script src="slick/slick.min.js"></script>
     <script src="js/script.js"></script>
@@ -388,6 +400,7 @@
 
 <!-- брейк поинты: 
 320
+540
 768
 1024 резиновый дизайн для 320 (горизонтально тоже учесть!!!!)
 2х 4х (экраны высокой плотности: просто почитать)
