--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
           <h2 class="section-5__title">НАШИ КЛИЕНТЫ</h2>
           <div class="section-5__slider">
             <div class="section-5__img-wrap">
+              <span class="section-5__number">01</span>
               <img
                 class="section-5__img"
                 src="styles/img/clients/1.png"
