--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
               <p class="section-1__subtitle">
                 Рассказываем что такое интернет магазин и зачем это нужно.
               </p>
-              <div class="section-1__img"></div>
+              <div class="section-1__decor-wrap">
+                <div class="section-1__img"></div>
+              </div>
+
               <p class="section-1__sub-button">Ответим на любой вопрос</p>
               <button class="section-1__button"></button>
             </div>
@@ -235,6 +238,7 @@
                 <p class="card__title">Восток Тех Резерв</p>
                 <p class="card__subtitle">Интернет-магазин</p>
               </a>
+
             </div>
 
             <div class="feedback">
@@ -275,6 +279,39 @@
               <img
                 class="section-5__img"
                 src="styles/img/clients/4.png"
+                alt=""
+              />
+            </div>
+            
+            <div class="section-5__img-wrap">
+              <span class="section-5__number">01</span>
+              <img
+                class="section-5__img"
+                src="styles/img/clients/1.png"
+                alt=""
+              />
+            </div>
+            <div class="section-5__img-wrap">
+              <span class="section-5__number">01</span>
+              <img
+                class="section-5__img"
+                src="styles/img/clients/1.png"
+                alt=""
+              />
+            </div>
+            <div class="section-5__img-wrap">
+              <span class="section-5__number">01</span>
+              <img
+                class="section-5__img"
+                src="styles/img/clients/1.png"
+                alt=""
+              />
+            </div>
+            <div class="section-5__img-wrap">
+              <span class="section-5__number">01</span>
+              <img
+                class="section-5__img"
+                src="styles/img/clients/1.png"
                 alt=""
               />
             </div>
